# recrypt-rs

./: .gitignore  .travis.yml  CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md  RELEASING.md  flake.nix  rust-toolchain.toml
.cargo/: config
.github/: .dependabot.yml  dependabot.yml
.github/workflows/: bump-version.yaml  ci.yaml  release.yaml  security-audit.yaml
.travis_scripts/: cmp-bench.sh  cross-test.sh
benches/: api_benchmark.rs
proptest-regressions/internal/: fp.txt
src/: api.rs  api_480.rs  api_common.rs  lib.rs  nonemptyvec.rs  prelude.rs
src/internal/: bit_repr.rs  bytedecoder.rs  curve.rs  double.rs  ed25519.rs  field.rs  fp.rs  fp12elem.rs  fp2elem.rs  fp6elem.rs  hashable.rs  homogeneouspoint.rs  macros.rs  memlock.rs  mod.rs  non_adjacent_form.rs  pairing.rs  platform.rs  rand_bytes.rs  schnorr.rs  sha256.rs
tests/: concurrency.rs
