[package]
name = "recrypt"
version = "0.14.1"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/IronCoreLabs/recrypt-rs"
documentation = "https://docs.rs/recrypt"
categories = ["cryptography", "algorithms"]
keywords = [
    "cryptography",
    "proxy-re-encryption",
    "PRE",
    "ECC",
    "transform-encryption",
]
description = "A pure-Rust implementation of Transform Encryption, a Proxy Re-encryption scheme"
edition = "2024"
rust-version = "1.85.0"

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
libc = { version = "0.2" }

[target.'cfg(all(windows, not(target_arch = "wasm32")))'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi"] }

[dependencies]
cfg-if = "1"
clear_on_drop = "0.2"
derivative = "2.1"
ed25519-dalek = { version = "2.1.1", default-features = false, features = [
    "std",
    "rand_core",
    "fast",
] }
# Explicit dependency so we can pass the wasm-bindgen flag to it
getrandom = { version = "0.3", optional = true }
gridiron = "0.10"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
quick-error = "2"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.7"
proptest = "1"
serde_json = "1"

[profile.dev]
opt-level = 2
debug = true

[profile.test]
opt-level = 2
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true

[features]
wasm = ["clear_on_drop/no_cc", "getrandom/js"]
#Can be used to disable the automatic mlock detection for architectures.
disable_memlock = []

[[bench]]
name = "api_benchmark"
harness = false

# disable libtest benches
# workaround for https://github.com/rust-lang/rust/issues/47241
[lib]
bench = false
